Projeto_Indicium.ipynb

--- a/Projeto_Indicium.ipynb
+++ b/Projeto_Indicium.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# Objeto do estudo\n",
     "\n",
-    "A motivação desse projeto é auxiliar no processo de criação de uma plataforma de aluguéis temporários na cidade de Nova York, mais especificamente colaborando no desenvolvimento de uma estratégia de precificação das diárias. A seguir temos uma análise exploratória dos dados já existentes de uma plataforma concorrente, assim como testes de validação de modelos preditivos de precificação com base nesses dados. Como estamos buscando prever uma variável target contínua, trata-se de um problema de regressão. Sendo assim, serão testados os modelos de regressão linear e random forest.\r\n"
+    "A motivação desse projeto é auxiliar no processo de criação de uma plataforma de aluguéis temporários na cidade de Nova York, mais especificamente colaborando no desenvolvimento de uma estratégia de precificação das diárias. A seguir temos uma análise exploratória dos dados já existentes de uma plataforma concorrente, assim como testes de validação de modelos preditivos de precificação com base nesses dados. Como estamos buscando prever uma variável target contínua, trata-se de um problema de regressão.\r\n"
    ]
   },
   {
